# im-agent-hub

./: .gitignore  Dockerfile  Makefile  README.md  deploy-bare.sh  deploy-livekit.sh  deploy.sh  docker-compose.yml  update.sh
pc/: .gitignore  CMakeLists.txt  build-release-local.bat  build-release.bat
pc/qml/: ChatPage.qml  LoginPage.qml  Main.qml
pc/qml/components/: AudioDevicePicker.qml  ChatInput.qml  ContactList.qml  GroupInfoDrawer.qml  ImageViewer.qml  InviteMemberDialog.qml  MessageBubble.qml  MessageList.qml  VoiceCallWindow.qml
pc/resources/: call.html
pc/scripts/: build-local.bat  build.bat  configure-local.bat  configure.bat  run-local.bat  run.bat
pc/src/: main.cpp
pc/src/database/: messagecache.cpp  messagecache.h
pc/src/models/: chatmodel.cpp  chatmodel.h  contactmodel.cpp  contactmodel.h
pc/src/network/: audiocallengine.cpp  audiocallengine.h  avatarprovider.cpp  avatarprovider.h  httpclient.cpp  httpclient.h  lotteryclient.cpp  lotteryclient.h  wsclient.cpp  wsclient.h  wxbridge.cpp  wxbridge.h
server/: dbcheck.go  go.mod  go.sum  main.go  test_e2e.go
server/api/: admin_auth.go  admin_service.go  admin_settings.go  admin_stats.go  admin_user.go  call_audio_hub.go  chat_hub.go  client_auth.go  emoji.go  group.go  livekit.go  lottery.go  middleware.go  router.go  service_api.go  service_auth.go  upload.go  ws_hub.go
server/config/: config.go  config.yaml
server/database/: db.go
server/model/: admin.go  group.go  message.go  service_staff.go  user.go
server/pkg/: jwt.go  response.go
server/service/: cleanup_service.go  message_service.go  openim_service.go  user_service.go
server/static/: livekit-client.esm.mjs
web/admin/: index.html  package-lock.json  package.json  vite.config.ts
web/admin/src/: App.vue  main.ts
web/admin/src/components/: Layout.vue  StatsCard.vue  UserForm.vue  UserTable.vue
web/admin/src/router/: index.ts
web/admin/src/services/: api.ts
web/admin/src/stores/: auth.ts
web/admin/src/utils/: request.ts
web/admin/src/views/: Dashboard.vue  GroupManage.vue  Login.vue  ServiceManage.vue  Settings.vue  UserManage.vue
web/h5/: index.html  package-lock.json  package.json  vite.config.ts
web/h5/src/: App.vue  main.ts
web/h5/src/components/: ChatInput.vue  DocxPreview.vue  EmojiPanel.vue  FileMessage.vue  ImageMessage.vue  ImagePreview.vue  LotteryResult.vue  MessageBubble.vue  MessageList.vue  VoiceCall.vue  VoiceMessage.vue
web/h5/src/router/: index.ts
web/h5/src/services/: openim.ts  ws.ts
web/h5/src/stores/: chat.ts  user.ts
web/h5/src/styles/: chat.css  reset.css  variables.css
web/h5/src/types/: index.ts
web/h5/src/utils/: recorder.ts  request.ts
web/h5/src/views/: Chat.vue  Login.vue  ServiceChat.vue  Shop.vue
